feat: Se añade la clase Puzzle
Se crea la clase Puzzle que va a ser la instancia de cada juego,
se crean las funciones para colocar todas las fichas de manera
aleatoria.

--- a/templates/puzzle.html
+++ b/templates/puzzle.html
@@ -6,9 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Puzzle</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/puzzle.css">
     <script src="../js/storage.js"></script>
 </head>
 <body>
     <a href="../index.html">Volver</a>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div id="tablero">
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+                <div class="ficha"><img src="" alt="" class="foto"></div>
+            </div>
+        </div>
+    </div>
+    <script src="../js/puzzle.js"></script>
 </body>
 </html>
