feat: Se agrega cronometro al tablero

--- a/templates/puzzle.html
+++ b/templates/puzzle.html
@@ -13,6 +13,9 @@
 <body>
     <a href="../index.html">Volver</a>
     <div class="container">
+        <div class="row">
+            <div class="col-12"><span id="cronometro">00:00:00</span></div>
+        </div>
         <div class="row justify-content-center">
             <div id="tablero">
                 <div class="ficha"><img src="" alt="" class="foto"></div>
